Merge branch 'remove-constructor-wrapper-classes' of https://github.com/michaelbraun/lucene-solr: LUCENE-8345, GitHub PR #392: Remove instantiation of redundant wrapper classes for primitives; add wrapper class constructors to forbiddenapis. This closes #392